Update dependencies and install ultralytics with torch packages

--- a/gradio.ipynb
+++ b/gradio.ipynb
@@ -63,9 +63,149 @@
     "import requests\n",
     "import json\n",
     "from typing import Tuple, Optional\n",
+    "import numpy as np\n",
+    "from PIL import Image, ImageDraw, ImageFont\n",
+    "import io\n",
+    "import fitz\n",
+    "import base64\n",
     "\n",
     "SYMBOL_API = \"https://ae9299c4f2d0.ngrok-free.app\"\n",
     "TEXT_API = \"https://b8bbb7ea43a3.ngrok-free.app\"\n",
+    "\n",
+    "def generate_symbol_visualization(pdf_path, symbol_detections, dpi=300):\n",
+    "    \"\"\"\n",
+    "    Generate annotated image showing detected symbols with bounding boxes.\n",
+    "    Uses the same visualization style as YOLO's result.plot().\n",
+    "    \n",
+    "    Args:\n",
+    "        pdf_path: Path to the PDF file\n",
+    "        symbol_detections: List of symbol detections from /detect_symbols API\n",
+    "        dpi: DPI for PDF rendering\n",
+    "    \n",
+    "    Returns:\n",
+    "        PIL Image with symbol annotations (red boxes)\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Convert PDF to image\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        page = doc[0]\n",
+    "        pix = page.get_pixmap(dpi=dpi)\n",
+    "        img_data = pix.tobytes(\"png\")\n",
+    "        img = Image.open(io.BytesIO(img_data)).convert(\"RGB\")\n",
+    "        doc.close()\n",
+    "        \n",
+    "        draw = ImageDraw.Draw(img)\n",
+    "        \n",
+    "        # Try to load a font, fallback to default\n",
+    "        try:\n",
+    "            font = ImageFont.truetype(\"arial.ttf\", 16)\n",
+    "        except:\n",
+    "            font = ImageFont.load_default()\n",
+    "        \n",
+    "        # Draw symbol detections (RED boxes)\n",
+    "        for detection in symbol_detections:\n",
+    "            if 'box_pixels' in detection:\n",
+    "                box = detection['box_pixels']\n",
+    "                x1 = int(box.get('x1', 0))\n",
+    "                y1 = int(box.get('y1', 0))\n",
+    "                x2 = int(box.get('x2', 0))\n",
+    "                y2 = int(box.get('y2', 0))\n",
+    "                \n",
+    "                # Draw rectangle with thick red border\n",
+    "                draw.rectangle([x1, y1, x2, y2], outline=(255, 0, 0), width=3)\n",
+    "                \n",
+    "                # Draw label background\n",
+    "                label = detection.get('label', 'Symbol')\n",
+    "                conf = detection.get('confidence', 0)\n",
+    "                text_label = f\"{label} {conf:.2f}\"\n",
+    "                \n",
+    "                # Get text size for background\n",
+    "                bbox = draw.textbbox((x1, y1), text_label, font=font)\n",
+    "                text_width = bbox[2] - bbox[0]\n",
+    "                text_height = bbox[3] - bbox[1]\n",
+    "                \n",
+    "                # Draw label background (red)\n",
+    "                draw.rectangle([x1, y1 - text_height - 4, x1 + text_width + 4, y1], fill=(255, 0, 0))\n",
+    "                # Draw label text (white on red)\n",
+    "                draw.text((x1 + 2, y1 - text_height - 2), text_label, fill=(255, 255, 255), font=font)\n",
+    "        \n",
+    "        return img\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] Symbol visualization failed: {e}\")\n",
+    "        # Create error image\n",
+    "        error_img = Image.new('RGB', (800, 600), color=(240, 240, 240))\n",
+    "        draw = ImageDraw.Draw(error_img)\n",
+    "        draw.text((50, 280), f\"Symbol Visualization Error: {str(e)}\", fill=(255, 0, 0))\n",
+    "        return error_img\n",
+    "\n",
+    "\n",
+    "def generate_text_visualization(pdf_path, text_detections, dpi=300):\n",
+    "    \"\"\"\n",
+    "    Generate annotated image showing detected text with bounding boxes.\n",
+    "    \n",
+    "    Args:\n",
+    "        pdf_path: Path to the PDF file\n",
+    "        text_detections: List of OCR results from /detect_text API\n",
+    "        dpi: DPI for PDF rendering\n",
+    "    \n",
+    "    Returns:\n",
+    "        PIL Image with text annotations (green boxes)\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # Convert PDF to image\n",
+    "        doc = fitz.open(pdf_path)\n",
+    "        page = doc[0]\n",
+    "        pix = page.get_pixmap(dpi=dpi)\n",
+    "        img_data = pix.tobytes(\"png\")\n",
+    "        img = Image.open(io.BytesIO(img_data)).convert(\"RGB\")\n",
+    "        doc.close()\n",
+    "        \n",
+    "        draw = ImageDraw.Draw(img)\n",
+    "        \n",
+    "        # Try to load a font, fallback to default\n",
+    "        try:\n",
+    "            font = ImageFont.truetype(\"arial.ttf\", 12)\n",
+    "        except:\n",
+    "            font = ImageFont.load_default()\n",
+    "        \n",
+    "        # Draw text detections (GREEN boxes)\n",
+    "        for detection in text_detections:\n",
+    "            if 'Bounding Box' in detection:\n",
+    "                bbox = detection['Bounding Box']\n",
+    "                x1 = int(bbox.get('xmin', 0))\n",
+    "                y1 = int(bbox.get('ymin', 0))\n",
+    "                x2 = int(bbox.get('xmax', 0))\n",
+    "                y2 = int(bbox.get('ymax', 0))\n",
+    "                \n",
+    "                # Draw rectangle with green border\n",
+    "                draw.rectangle([x1, y1, x2, y2], outline=(0, 200, 0), width=2)\n",
+    "                \n",
+    "                # Draw text content preview (truncated)\n",
+    "                text_content = detection.get('Text', '')[:25]\n",
+    "                if len(detection.get('Text', '')) > 25:\n",
+    "                    text_content += \"...\"\n",
+    "                \n",
+    "                # Get text size for background\n",
+    "                text_bbox = draw.textbbox((x1, y1), text_content, font=font)\n",
+    "                text_width = text_bbox[2] - text_bbox[0]\n",
+    "                text_height = text_bbox[3] - text_bbox[1]\n",
+    "                \n",
+    "                # Draw label background (green)\n",
+    "                draw.rectangle([x1, y1 - text_height - 4, x1 + text_width + 4, y1], fill=(0, 200, 0))\n",
+    "                # Draw label text (white on green)\n",
+    "                draw.text((x1 + 2, y1 - text_height - 2), text_content, fill=(255, 255, 255), font=font)\n",
+    "        \n",
+    "        return img\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"[ERROR] Text visualization failed: {e}\")\n",
+    "        # Create error image\n",
+    "        error_img = Image.new('RGB', (800, 600), color=(240, 240, 240))\n",
+    "        draw = ImageDraw.Draw(error_img)\n",
+    "        draw.text((50, 280), f\"Text Visualization Error: {str(e)}\", fill=(0, 200, 0))\n",
+    "        return error_img\n",
+    "\n",
     "\n",
     "def validate_packaging(\n",
     "    excel_file,\n",
@@ -79,10 +219,11 @@
     "):\n",
     "    \"\"\"\n",
     "    Complete validation pipeline - runs everything automatically!\n",
+    "    Returns: summary, symbol_json, text_json, symbol_viz, text_viz\n",
     "    \"\"\"\n",
     "\n",
     "    if not excel_file or not pdf_file:\n",
-    "        return \"Please upload both Excel and PDF files.\", None, None, None\n",
+    "        return \"Please upload both Excel and PDF files.\", None, None, None, None\n",
     "\n",
     "    try:\n",
     "        progress(0.1, desc=\"Converting Excel to legal rules...\")\n",
@@ -95,7 +236,7 @@
     "                timeout=600\n",
     "            )\n",
     "        if response.status_code != 200:\n",
-    "            return f\"Symbol Excel conversion failed: {response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Symbol Excel conversion failed: {response.json().get('message', 'Unknown error')}\", None, None, None, None\n",
     "\n",
     "        # Convert Excel for Text Detection\n",
     "        with open(excel_file.name, 'rb') as f:\n",
@@ -105,7 +246,7 @@
     "                timeout=600\n",
     "            )\n",
     "        if response.status_code != 200:\n",
-    "            return f\"Text Excel conversion failed: {response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Text Excel conversion failed: {response.json().get('message', 'Unknown error')}\", None, None, None, None\n",
     "\n",
     "        progress(0.2, desc=\"Legal rules generated.\")\n",
     "        progress(0.25, desc=\"Loading AI models...\")\n",
@@ -113,12 +254,12 @@
     "        # Load Symbol Detection models\n",
     "        response = requests.post(f\"{SYMBOL_API}/load_models\", timeout=60)\n",
     "        if response.status_code != 200:\n",
-    "            return f\"Symbol model loading failed: {response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Symbol model loading failed: {response.json().get('message', 'Unknown error')}\", None, None, None, None\n",
     "\n",
     "        # Load Text Detection models\n",
     "        response = requests.post(f\"{TEXT_API}/load_models\", timeout=180)\n",
     "        if response.status_code != 200:\n",
-    "            return f\"Text model loading failed: {response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Text model loading failed: {response.json().get('message', 'Unknown error')}\", None, None, None, None\n",
     "\n",
     "        progress(0.35, desc=\"Models loaded.\")\n",
     "        progress(0.4, desc=\"Detecting symbols...\")\n",
@@ -137,16 +278,23 @@
     "                timeout=180\n",
     "            )\n",
     "        if response.status_code != 200:\n",
-    "            return f\"Symbol detection failed: {response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Symbol detection failed: {response.json().get('message', 'Unknown error')}\", None, None, None, None\n",
     "\n",
     "        detections = response.json()\n",
+    "        symbol_detections = detections.get('detections', [])\n",
+    "        \n",
+    "        progress(0.45, desc=\"Generating symbol visualization...\")\n",
+    "        \n",
+    "        # Generate Symbol Visualization\n",
+    "        symbol_viz = generate_symbol_visualization(pdf_file.name, symbol_detections, dpi)\n",
+    "        \n",
     "        progress(0.5, desc=\"Validating symbols...\")\n",
     "\n",
     "        # Validate symbols\n",
     "        validation_response = requests.post(\n",
     "            f\"{SYMBOL_API}/validate_symbols\",\n",
     "            json={\n",
-    "                'detections': detections.get('detections', []),\n",
+    "                'detections': symbol_detections,\n",
     "                'country': \"Default\",\n",
     "                'product_metadata': {\n",
     "                    'type': product_type,\n",
@@ -157,7 +305,7 @@
     "            timeout=300\n",
     "        )\n",
     "        if validation_response.status_code != 200:\n",
-    "            return f\"Symbol validation failed: {validation_response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Symbol validation failed: {validation_response.json().get('message', 'Unknown error')}\", None, None, symbol_viz, None\n",
     "\n",
     "        symbol_results = {\n",
     "            \"status\": \"success\",\n",
@@ -175,11 +323,10 @@
     "                print(\"[WARN] GPU clear failed, continuing anyway\")\n",
     "        except Exception as e:\n",
     "            print(f\"[WARN] GPU clear request failed: {e}\")\n",
-    "            pass  # Continue even if clear fails\n",
+    "            pass\n",
     "\n",
     "        # Text detection\n",
     "        progress(0.6, desc=\"Detecting text...\")\n",
-    "        # Detect text with retry logic for SSL errors\n",
     "        max_retries = 3\n",
     "        retry_count = 0\n",
     "        response = None\n",
@@ -199,32 +346,38 @@
     "                        data=data,\n",
     "                        timeout=180\n",
     "                    )\n",
-    "                break  # Success, exit retry loop\n",
+    "                break\n",
     "\n",
     "            except requests.exceptions.SSLError as e:\n",
     "                retry_count += 1\n",
     "                if retry_count < max_retries:\n",
     "                    progress(0.6, desc=f\"SSL error, retrying ({retry_count}/{max_retries})...\")\n",
     "                    import time\n",
-    "                    time.sleep(2)  # Wait 2 seconds before retry\n",
+    "                    time.sleep(2)\n",
     "                else:\n",
-    "                    return f\"Text detection failed after {max_retries} retries due to SSL error. Please restart Text Detection Flask API in Colab and update the ngrok URL.\", None, None, None\n",
+    "                    return f\"Text detection failed after {max_retries} retries due to SSL error.\", None, None, symbol_viz, None\n",
     "\n",
     "            except Exception as e:\n",
-    "                return f\"Text detection failed: {str(e)}\", None, None, None\n",
+    "                return f\"Text detection failed: {str(e)}\", None, None, symbol_viz, None\n",
     "\n",
     "        if response is None or response.status_code != 200:\n",
     "            error_msg = response.json().get('message', 'Unknown error') if response else 'No response'\n",
-    "            return f\"Text detection failed: {error_msg}\", None, None, None\n",
+    "            return f\"Text detection failed: {error_msg}\", None, None, symbol_viz, None\n",
     "\n",
     "        ocr = response.json()\n",
+    "        text_detections = ocr.get('ocr_results', [])\n",
+    "        \n",
+    "        progress(0.75, desc=\"Generating text visualization...\")\n",
+    "        \n",
+    "        # Generate Text Visualization\n",
+    "        text_viz = generate_text_visualization(pdf_file.name, text_detections, dpi)\n",
     "\n",
     "        progress(0.8, desc=\"Validating text...\")\n",
     "\n",
     "        validation_response = requests.post(\n",
     "            f\"{TEXT_API}/validate_text\",\n",
     "            json={\n",
-    "                'ocr_results': ocr.get('ocr_results', []),\n",
+    "                'ocr_results': text_detections,\n",
     "                'country': \"Default\",\n",
     "                'product_metadata': {\n",
     "                    'type': product_type,\n",
@@ -235,7 +388,7 @@
     "            timeout=300\n",
     "        )\n",
     "        if validation_response.status_code != 200:\n",
-    "            return f\"Text validation failed: {validation_response.json().get('message', 'Unknown error')}\", None, None, None\n",
+    "            return f\"Text validation failed: {validation_response.json().get('message', 'Unknown error')}\", None, None, symbol_viz, text_viz\n",
     "\n",
     "        text_results = {\n",
     "            \"status\": \"success\",\n",
@@ -243,17 +396,17 @@
     "            \"validation\": validation_response.json()\n",
     "        }\n",
     "\n",
-    "        progress(0.9, desc=\"Generating report...\")\n",
+    "        progress(0.95, desc=\"Generating report...\")\n",
     "\n",
     "        summary = format_summary(symbol_results, text_results)\n",
     "        symbol_json = json.dumps(symbol_results, indent=2)\n",
     "        text_json = json.dumps(text_results, indent=2)\n",
     "        progress(1.0, desc=\"Validation complete.\")\n",
     "\n",
-    "        return summary, symbol_json, text_json, None\n",
+    "        return summary, symbol_json, text_json, symbol_viz, text_viz\n",
     "\n",
     "    except Exception as e:\n",
-    "        return f\"Error: {str(e)}\", None, None, None\n",
+    "        return f\"Error: {str(e)}\", None, None, None, None\n",
     "\n",
     "\n",
     "def format_summary(symbol_results, text_results):\n",
@@ -359,8 +512,11 @@
     "                    with gr.Tab(\"Text Results\"):\n",
     "                        text_output = gr.Code(language=\"json\", label=\"Text Detection & Validation\")\n",
     "\n",
-    "                    with gr.Tab(\"Visualization\"):\n",
-    "                        viz_output = gr.Image(label=\"Annotated Packaging\")\n",
+    "                    with gr.Tab(\"Symbol Visualization\"):\n",
+    "                        symbol_viz_output = gr.Image(label=\"Detected Symbols (Red Boxes)\")\n",
+    "\n",
+    "                    with gr.Tab(\"Text Visualization\"):\n",
+    "                        text_viz_output = gr.Image(label=\"Detected Text (Green Boxes)\")\n",
     "\n",
     "        validate_btn.click(\n",
     "            fn=validate_packaging,\n",
@@ -373,7 +529,7 @@
     "                packaging_height,\n",
     "                confidence_threshold\n",
     "            ],\n",
-    "            outputs=[summary_output, symbol_output, text_output, viz_output]\n",
+    "            outputs=[summary_output, symbol_output, text_output, symbol_viz_output, text_viz_output]\n",
     "        )\n",
     "\n",
     "        gr.Markdown(\"\"\"\n",
@@ -382,6 +538,8 @@
     "        - Excel must include \"Logo List - 21A\" and \"Text Availability - 21A\" sheets.\n",
     "        - Higher DPI increases quality but slows processing.\n",
     "        - Model loading may take longer on first run.\n",
+    "        - **Symbol Visualization**: Red boxes show detected symbols/logos\n",
+    "        - **Text Visualization**: Green boxes show detected text blocks\n",
     "        \"\"\")\n",
     "\n",
     "    return demo\n",
